@@ -7,6 +7,8 @@ New in version 6.2.2
 - Make $PYTHONPATH configurable from Emacs
   Emacs doesn't read settings from .bashrc
 
+- py-indent-paren-spanned-multilines-p new default `t'
+
 New in version 6.2.1
 ---------------------
 
